# agentx

./: .gitignore  AGENTS.md  AGENTS_UPDATE.txt  CURRENT_ISSUE.md  JIRA_SKILL_TEST_RESULTS.md  LICENSE  META.md  META_COMMANDS.md  META_HARNESS.md  OMT_SESSION_STATE_feature_023.md  OMT_SESSION_STATE_feature_023_deep_tests.md  PROJECTS.md  PROJECT_DOCUMENTATION.md  PROJECT_NAVIGATION_ROUTES.md  PROJECT_ROADMAP.md  PROJECT_TESTING_SANDBOX_RULES.md  README.md  ROADMAP.md  ROOT_MODULE.md  USER_COMMAND_EXTENSION.md  USER_MANUAL.md  WORK.md  chat.py  conftest.py  feature_003_rag_evaluation.md  main.py  opencode-kb  opencode.jsonc  pyproject.toml  repl.py  session-ses_3362.md  ta_digest_84f8824a.py  test_jira_comprehensive.py  test_jira_petri_net.py  test_think_gate.py  token_audit_report.txt  token_audit_sandbox.txt  web_chat.py  web_ingestion.py
.agents_prompts/: build.md  build.txt  code-reviewer.md
.development_tools/: META.md
.experiments/: META.md
.meta/: LOG.md  META.md  META_HARNESS.md  WORK.md  omt_constants.json
.meta.development_tools/mcp-knowledge-base/: OPENCODE_SETUP.md  README.md  REFACTOR.md  UV_SETUP.md  __main__.py  pyproject.toml  rag_tool.py  server.py
.meta.development_tools/mcp-knowledge-base/mcp/: __init__.py  __main__.py  server.py
.meta.doc/: KB_POPULATION.md  meta project harness evolution.md  meta-harness-evolution.md
.meta.knowledge_base/: KB_INDEX.json  META.md  QUICKSTART.md  README.md  USAGE.md  __init__.py  __main__.py  kb.py  knowledge.db  pyproject.toml  seed.py
.meta.knowledge_base/cli/: __init__.py  main.py
.meta.knowledge_base/core/: __init__.py
.meta.knowledge_base/schemas/: v1_schema.sql
.meta.project_development/: AGENTS.md  META.md
.meta.reflection/: 2026-04-19_23-12-35_reflection_log.md
.meta.sandbox/: META_HARNESS.md  final_report.md  optimization_plan.md  optimization_report.md  token_analysis_report.md
.meta.tests_automated/: META.md
.meta.tools/: KB_COMMAND.md  KB_GUIDE.md  KB_POPULATION_GUIDE.md  META.md  META_COMMANDS.md  POPULATE.md  README.md  UNIFIED_KB.md  USAGE.md  __init__.py  commands.py  meta  meta_tools.py  populate.py  populate_kb.py
.opencode/: opencode.jsonc
.project_development/: CODING_STYLE.md  CORE_DIRECTIVES.md  CURRENT_ISSUE.md  META.md  PROJECT_DOCUMENTATION.md  PROJECT_NAVIGATION_ROUTES.md  PROJECT_ROADMAP.md  PROJECT_TASKS.md  QUICK_REFERENCE.md  TASK_WORKFLOW.md
.sandbox/: META.md
.tests_sandbox/: META.md
_agent_rules/: PROJECT_DOCUMENTATION.md  PROJECT_NAVIGATION_ROUTES.md  PROJECT_ROADMAP.md
agent_x/: command_line.py  constants.py  llm_factory.py  security.py
agents/: MODULE.md  agent_chat_factory.py  agent_function_router_factory.py  agent_rag_factory.py  agent_react_web_search_factory.py  graph_react_web_search_factory.py
app/: MODULE.md  replapp.py
app_modules/: MODULE.md
chroma_db_vf_device_management/: chroma.sqlite3
common/: logger.py
doc/: agents.md  app_common.md  app_model.md  app_modules_data_stores.md  app_modules_document_loaders.md  app_modules_langchain.md  app_modules_langgraph.md  app_modules_web_ingestion.md  app_repl.md  app_security.md  dependencies.md  llm_models.md  overview.md  petri-net-session-management.md  root_module.md  tests.md
experiments/: PETRI_NET_SPRINT2_EXPERIMENT.md  PETRI_NET_SPRINT_EXPERIMENT.md  create_tickets.py  petri_net_analysis_simple.py  petri_net_sprint2_analysis.py
features/: META.md
jira-petri-skill-explainer/: README.md  package-lock.json  package.json
llm_managers/: __init__.py  agent_chat_factory.py  agent_function_router_factory.py  agent_rag_factory.py  agent_react_web_search_factory.py  factory.py  graph_react_web_search_factory.py
llm_models/: llm_factory.py
local_mcp/: mcp_main.py
mcp/: mcp_main.py
mcp_servers/knowledge_base/: README.md  pyproject.toml  server.py
mcp_servers/knowledge_base/analyzer/: __init__.py  base.py  docstring.py  patterns.py  python_ast.py  relationships.py  symbol_resolver.py
mcp_servers/knowledge_base/chroma_db/: chroma.sqlite3
mcp_servers/knowledge_base/graph/: __init__.py  builder.py  engine.py  export.py  models.py  queries.py  store.py  sync.py
mcp_servers/knowledge_base/kb/: __init__.py  api.py  chunking.py  embedding.py  eval.py  ids.py  ingest.py  logging.py  models.py  query_engine.py  reranking.py  retrieval.py  search.py  sparse_index.py  store.py  synthesis.py
mcp_servers/knowledge_base/kb_module/: README.md  __init__.py  core.py
mcp_servers/knowledge_base/meta_harness_knowledge_base/: README.md  __init__.py  kb  knowledge_base.py  pyproject.toml
mcp_servers/knowledge_base/meta_harness_knowledge_base/src/: rag_ingest.py  rag_tool.py
mcp_servers/knowledge_base/prompts/: __init__.py  analysis.py  engine.py  modification.py  navigation.py  onboarding.py  registry.py
mcp_servers/knowledge_base/resources/: __init__.py  api.py  arch.py  code.py  exporters.py  flows.py  project.py  quality.py  registry.py  session.py
mcp_servers/knowledge_base/tests/: conftest.py  test_analyzer_python.py  test_eval.py  test_graph_engine.py  test_graph_export.py  test_graph_models.py  test_graph_queries.py  test_graph_tool_integration.py  test_ids.py  test_ingest.py  test_prompts.py  test_prompts_integration.py  test_query_engine.py  test_reranking.py  test_resources.py  test_resources_integration.py  test_retrieval.py  test_search.py  test_search_v3.py  test_server.py  test_server_v4_integration.py  test_sparse_index.py  test_store.py  test_synthesis.py  test_synthesis_llm.py
plans/: llm_centralization_plan.md
prompts/: build.txt
scripts/: debug_tui.py  demo_tui.py  test_full_tui.py  test_keyboard_events.py  test_pilot_full.py  test_tui_basic.py  test_tui_interactive.py  test_tui_run.py  test_tui_simple.py  web_ingestion.py
security/: security.py
src/: command_line.py  main.py  test_omt_mvc_gate.py
test_improvements/: README.md
tests/: README.md  conftest.py  constants.py  framework_helpers.py  testing_utils.py
tests_sandbox/: benchmark_navigation.md  benchmark_report.md  test_agent_streaming.py  test_argument_parser.py  test_benchmark_navigation.py  (+10 more)
(+1317 files in other folders)
