[project]
name = "agentx"
version = "0.1.1"
readme = "README.md"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb==1.5.8",
    "langchain==1.2.17",
    "langchain-community==0.4.1",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.2.1",
    "langchain-pinecone==0.2.13",
    "langchain-tavily==0.2.18",
    "langchainhub==0.1.21",
    "pypdf==6.10.2",
    "python-dotenv==1.2.2",
    "langchain-experimental==0.4.1",
    "llama-cpp-python==0.3.21",
    "faiss-cpu==1.13.2",
    "langchain-chroma==1.1.0",
    "langgraph==1.1.10",
    "grandalf==0.8",
    "langchain-google-genai==4.2.2",
    "langchain-core==1.3.2",
    "langchain-openrouter==0.2.3",
    "openai==2.33.0",
    "langchain-mcp-adapters==0.2.2",
    "mcp[cli]==1.27.0",
    "aiohttp==3.13.5",
    "fastmcp==3.2.4",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[project.scripts]
agentx = "agentx.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]