[project]
name = "agentx"
version = "0.1.1"
readme = "README.md"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb==1.5.9",
    "langchain==1.3.1",
    "langchain-community==0.4.1",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.2.1",
    "langchain-pinecone==0.2.13",
    "langchain-tavily==0.2.18",
    "pypdf==6.12.0",
    "python-dotenv==1.2.2",
    "langchain-experimental==0.4.1",
    "llama-cpp-python==0.3.23",
    "faiss-cpu==1.13.2",
    "langchain-chroma==1.1.0",
    "langgraph==1.2.1",
    "grandalf==0.8",
    "langchain-google-genai==4.2.2",
    "langchain-core==1.4.0",
    "langchain-openrouter==0.2.3",
    "openai==2.37.0",
    "aiohttp==3.13.5",
    "numpy>=2.4.6",
    "uuid64>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[project.scripts]
agentx = "agentx.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
