[project]
name = "agentx"
version = "0.1.1"
readme = "README.md"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb==1.5.9",
    "langchain==1.3.10",
    "langchain-community==0.4.2",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.3.2",
    "langchain-pinecone==0.2.13",
    "langchain-tavily==0.2.18",
    "pypdf==6.13.3",
    "python-dotenv==1.2.2",
    "langchain-experimental==0.4.2",
    "llama-cpp-python==0.3.31",
    "faiss-cpu==1.14.3",
    "langchain-chroma==1.1.0",
    "langgraph==1.2.6",
    "grandalf==0.8",
    "langchain-google-genai==4.2.5",
    "langchain-core==1.4.8",
    "langchain-openrouter==0.2.3",
    "openai==2.43.0",
    "aiohttp==3.14.1",
    "numpy>=2.4.6",
    "uuid64>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[project.scripts]
agentx = "agentx.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
