[project]
name = "agent-x-mcp-knowledge-base"
version = "1.0.0"
description = "MCP tool for Meta Project Harness Knowledge Base with RAG"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mcp-knowledge-base = "mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wildcard]
packages = ["mcp"]

[tool.uv]
dev-dependencies = []
