[project]
name = "knowledge_base"
version = "0.1.0"
description = "Local MCP server exposing the AgentX knowledge base"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]==1.27.1",
    "fastmcp==3.3.1",
]

[project.scripts]
knowledge_base = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
