[project]
name = "knowledge_base"
version = "0.2.0"
description = "Local MCP server for Meta Project Harness Knowledge Base with ChromaDB RAG"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]==1.27.1",
    "fastmcp==3.3.1",
    "chromadb>=0.4.0",
]

[project.scripts]
knowledge_base = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "server.py",
    "kb/",
]
