[project]
name = "knowledge_base"
version = "0.4.1"
description = "Local MCP server for Meta Project Harness Knowledge Base with ChromaDB RAG + Knowledge Graph"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]==1.27.1",
    "fastmcp==3.3.1",
    "chromadb>=0.4.0",
    "networkx>=3.0",
    "jinja2>=3.1",
    "sentence-transformers>=5.5.1",
]

[project.optional-dependencies]
sparse = ["bm25s>=0.3"]
rerank = ["sentence-transformers>=3.0", "torch>=2.0"]
llm = ["transformers>=4.36"]
graph = ["networkx>=3.0", "jinja2>=3.1"]
all = ["knowledge-base[sparse,rerank,llm,graph]"]

[project.scripts]
knowledge_base = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "server.py",
    "kb/",
    "graph/",
    "analyzer/",
    "resources/",
    "prompts/",
]
